Added basic team controllers and delegated permissions concerns to another microservice
